IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
9/12/07: Added options to model2point for getting non-integer output, and
object and contour numbers.

9/11/07: IMOD_3-10-17
9/11/07: Added options to sirtsetup for better management of intermediate
reconstructions, and added more instructions to man page.

9/11/07: Added an option to trimvol to allow scaling of floating point to 
integer.

9/8/07: Fixed Tilt's reading of SHIFT and some other options, broken in PIP 
upgrade, 3.10.13.

9/7/07: Fixed Blendmont to stop truncating integer input data at 0 for mode 1 
or 32767 for mode 6.

8/30/07: Fixed Rotatevol, Matchvol, Warpvol to work with more than 32767 slices
in a layer of cubes.

8/30/07: Made clip flipyz/rotx read multiple slices of data up to 500 MB worth
then write the slices out, reducing real time consumed by 6-10 fold.

8/28/07: In eTomo parallel processing allowing Resume after exiting and re-
starting eTomo.

8/21/07: In eTomo added a warning message to Tomogram Combination for
situations where the X and Y min and max values should be changed.

8/20/07: Fixed Findcontrast to work with densities over 1000000.

8/17/07: IMOD_3-10-16
8/17/07: Fixed sirtsetup to work with binning and when making a log stack.

8/16/07: In eTomo, added ability to set the size of the aligned stack in
the advanced section of the Newstack/Blendmont panel.  This is to allow the
SIRT procedure to be used on a trial subarea, and to allow oversized
recontructions to recover area lost due to rotation of the tilt axis to
vertical.

8/15/07: Fixed processchunks to work with > 999 chunks, up to 9999.

8/15/07: Fixed bug in slicer that crashed 3dmod, which showed up with new mouse
rotations.

8/13/07: Added a Locator window to 3dmod to keep track of and manipulate the
area displayed in the Zap window.

8/12/07: IMOD_3-10-15
8/10/07: Sirtsetup has a man page and can work with a tilt command file that
has a LOG entry.
