@@ -5,9 +5,14 @@
 processchunks \- Run command files in parallel on multiple processors
 .SH SYNOPSIS
 processchunks [options] <machine list> <root name of command files>
+
+processchunks [options] -q # <queue command and arguments> <root name>
 .SH DESCRIPTION
 processchunks will process a set of command files in parallel on multiple
-machines or processors that have access to a common filesystem.  The command
+machines or processors that have access to a common filesystem.  
+
+.SS Command Files
+The command
 files should be in the format runnable with Vmstocsh(1) (e.g., using subm)
 and be named like files produced by Chunksetup(1).  Specifically, the files
 for processing individual components should be named
@@ -42,8 +47,9 @@ local machine, then 11 to 19 will be run in parallel, then
 rootname-020-sync.com will be run alone, then all remaining files will be run
 in parallel.
 
+.SS Running Processchunks
 The machine list provided on the command line should be a list of machine
-names or IP address, separated by commas and with no embedded spaces.
+names or IP addresses, separated by commas and with no embedded spaces.
 Machines with multiple processors should be entered as many times as the
 number of processors that you want to use.  The local machine on which you are
 running Processchunks can be identified by its hostname or as "localhost"; in
@@ -93,6 +99,30 @@ this program after stopping in this way, be sure to use the
 .B -r
 option so that existing results will be retained.
 
+.SS Running on a Cluster Queue
+Processchunks can submit all command files to a cluster queue instead of
+running them on specific machines with ssh, provided that there is a program
+that can perform the operations needed to place a chunk on the queue and kill
+jobs.  IMOD contains a script, Queuechunk(1), which can do these operations
+for some specific queue types.  For other queues or variations, this script
+would have to be modified or replaced.  To use a queue, enter the
+.B -q
+option with the maximum number of jobs to be placed on the queue at any time,
+and replace the list of machine name with the command that Processchunks needs
+to issue, e.g.:
+   "queuechunk -t pbs -q fast"
+.br
+Note that the command will contain multiple words and must be enclosed in
+quotes as above.  With the version distributed in IMOD, the type must be
+specified with
+.B -t,
+and there is an option 
+.B -q
+to specify the name of the queue, and an option
+.B -h
+to specify the name of the head node, which would then be contacted via ssh.
+
+.SS Initial Configuration
 To set up ssh keys for access without passwords, simply run 
    ssh-keygen -t dsa
 .br
@@ -106,6 +136,23 @@ separately generated keys.  If this seems to be the case, run ssh-keygen once
 on each type of machine then
 combine the .ssh/id_dsa.pub files from each into one authorized_keys2 file.
 Distribute this combined authorized_keys2 file to the .ssh directories.
+
+Parallel processing through eTomo uses Processchunks.  The available machines
+are generally defined in a file "cpu.adoc" that is located in the directory
+pointed to by the environment variable IMOD_CALIB_DIR (default
+/usr/local/ImodCalib).  See the example cpu.adoc file in $IMOD_DIR/autodoc and
+the manual page for cpuadoc(1) for full details on
+configuring this file.  For a single machine with multiple CPUs,
+there are two simple options for enabling the parallel processing: 
+   1) Make a file /usr/local/ImodCalib/cpu.adoc with these two lines:
+       [Computer = localhost]
+       number = 4
+.br
+where the number should be set to the number of processors.
+    2) set the
+environment variable IMOD_PROCESSORS to the number of processors, e.g.,
+    setenv IMOD_PROCESSORS 4     (for tcsh users)
+    export IMOD_PROCESSORS=4     (for bash users)
 
 .SS Options
 .TP
@@ -142,6 +189,18 @@ default limit is reported by the program's usage statement.
 .B -c <file>
 Check the given file periodically for lines with commands to quit, pause, or 
 drop a machine (Q, P, or D machine_name).
+.TP
+.B -q <value>
+Put chunks on a cluster queue instead of sending them to individual machines
+via ssh.  The given value indicates the maximum number of chunks to submit at
+any one time.  With this option, the list of machine names must be replaced
+by the command needed to interact with the queue.
+.TP
+.B -Q <name>
+When running on a queue, this option can be used to specify the name that
+Processchunks will use when it reports chunks being started and 
+finishing.  The entry must be a single word with no embedded spaces.  It need
+not match the actual name of the queue; the default is "queue".
 .TP 
 .B -P
 Output process ID.
@@ -165,4 +224,4 @@ imodwincpu, make a link on each Windows machine, such as:
 .SH AUTHOR
 David Mastronarde  <mast@colorado.edu>
 .SH SEE ALSO
-chunksetup(1), vmstocsh(1)
+chunksetup(1), vmstocsh(1), queuechunk(1), cpuadoc(1)
